removed some unused code

--- a/calendar.html
+++ b/calendar.html
@@ -32,7 +32,7 @@
         <span>Thur</span>
       </th>
       <th>
-        <span class="day">5</span> <!-- to set a circle: set class active -->
+        <span class="day">5</span>
         <span>Fri</span>
       </th>
       <th>
