--- a/tmp.html
+++ b/tmp.html
@@ -32,8 +32,10 @@
       }
       
       #Main-content {
-        max-width: 1000px;
+        max-width: 970px;
         margin: auto;
+        padding-left: 15px;
+        padding-right: 15px;
         flex-grow: 1;
         flex-shrink: 1;
         background-color: white;
