--- a/web_page/html/calendar.html
+++ b/web_page/html/calendar.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Calendar</title>
   
-   <link rel="stylesheet" href="calendar_style.css">
+   <link rel="stylesheet" href="..\css\calendar_style.css">
 
 
 </head>
