--- a/Arrangor/arrangor_konsertoversikt.html
+++ b/Arrangor/arrangor_konsertoversikt.html
@@ -20,10 +20,8 @@
         </div>
         <div id="menubar">
           <ul id="menu">
-              <li><a>Home</a></li>
-              <li><a>Something</a></li>
-              <li><a>Things</a></li>
-              <li><a>Nothing</a></li>
+              <li><a href="arrangor_home.html">Min Side</a></li>
+              <li><a>Konsertoversikt</a></li>
           </ul>
         </div>
       </div>
