--- a/Om_Oss/Om_Oss.html
+++ b/Om_Oss/Om_Oss.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Skriv her</title>
-    <link rel="stylesheet" type="text/css" href="css\general.css">
+    <title>Om Oss</title>
+    <link rel="stylesheet" type="text/css" href="..\Om_Oss\Om_Oss.css">
 
   </head>
 
@@ -15,6 +15,7 @@
           <h1>Nettside</h1>
         </div>
         <div id="overskrift2">
+          <h2></h2>
         </div>
         <div id="menubar">
           <ul id="menu">
@@ -29,6 +30,32 @@
     </header>
 
     <main id="Main-content">
+      <h2>Om Nettside</h2>
+      </br>
+                  <b>Hvem er vi?</b>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin egestas quam vel dignissim tincidunt.
+                  Mauris id eros eu dui tincidunt porta quis eu velit. Cras sit amet rhoncus nulla, non dictum dui.
+                  Donec sed lectus in dui efficitur tristique. Etiam et ultricies urna. Curabitur eu lacus pharetra sapien aliquam feugiat.
+              </p>
+            <b>Historien</b>
+              <p>
+                  Sed enim justo, rhoncus a massa a, porta lacinia urna. Nullam placerat sit amet tellus eu ultricies.
+                  Etiam ac nisl finibus, mattis justo quis, posuere odio. Quisque malesuada dui non leo ultrices, ac laoreet nulla eleifend.
+                  Etiam blandit luctus felis eu facilisis. Donec scelerisque felis eget elit hendrerit volutpat. Proin et ante dapibus, rhoncus nisl ut, aliquet risus.
+                </p>
+              <b>Filosofien</b>
+                 <p>
+                  Maecenas nulla arcu, dictum lacinia ligula ut, mollis molestie augue. Pellentesque ipsum nulla, tincidunt vitae placerat in, tincidunt et tellus.
+                  Nullam mattis leo mauris, vitae blandit tortor lacinia ut.
+                </p>
+              <b>Bedriften</b>
+              <p>
+                  Vestibulum tempor libero non odio ornare commodo. Sed tristique mi non eleifend blandit.
+                  Donec placerat mauris non luctus tempor. Curabitur accumsan ante velit, eget volutpat lacus lobortis id. Nunc tempus vestibulum diam, sed sodales justo auctor vitae.
+                  Vestibulum maximus et quam eu sodales.
+                </p>
+               </br>
     </main>
     <!-- Slutt på sidens innhold -->
   <!-- Content slutt -->
