--- a/Om_Oss/Om_Oss.html
+++ b/Om_Oss/Om_Oss.html
@@ -22,7 +22,7 @@
               <li><a>Home</a></li>
               <li><a>Om Oss</a></li>
               <li><a>Kontakt</a></li>
-              <li><a>Log Out</a></li>
+              <li><a href="/it1901/Log_In"><a>Log Out</a></li>
 
           </ul>
         </div>
@@ -71,22 +71,18 @@
               <p>
               Org.nr.: 999 444 222
               </p>
-          </div>
 
-          <div class="column">
             <h5>Kontakt</h5>
               <p>
               Telefon: <a href="tel:73009900">73 00 99 00</a><br />
               Åpningstider: 09-14<br />
               Ansattsøk
               </p>
-              <p>
-              <img src="../img/FB-f-Logo__blue_29.png" width="14" alt="FB"/> <a href="http://facebook.com/">Facebook</a><br />
-              <img src="../img/Twitter_Logo_White_On_Blue.png" width="14" alt="Twitter"/> <a href="http://twitter.com/">Twitter</a><br />
+              <p >
+              <img src="../img/FB-f-Logo__blue_29.png" width="14" alt="FB"/> <a href="http://facebook.com/"> Facebook </a><br/>
+              <img src="../img/Twitter_Logo_White_On_Blue.png" width="14" alt="Twitter"/> <a href="http://twitter.com/"> Twitter </a><br/>
               </p>
-          </div>
 
-          <div class="column">
             <p>
             <a href="/it1901/Om_Oss">Om Nettside.no</a>
             </p>
@@ -105,7 +101,6 @@
               </p>
           </div>
       </div>
-
       </div>
   </div><!-- Container slutt -->
   <div class="container copyright">Nettside Webutvikling &copy; 2017</div>
