--- a/Kontakt/Kontakt.html
+++ b/Kontakt/Kontakt.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
 
     <title>Om Oss</title>
-    <link rel="stylesheet" type="text/css" href="..\Om_Oss\Om_Oss.css">
+    <link rel="stylesheet" type="text/css" href="..\CSS\general.css">
 
   </head>
 
