--- a/Kontakt/Kontakt.html
+++ b/Kontakt/Kontakt.html
@@ -56,11 +56,8 @@
                           	<td><label for="text">Skriv her</label></td>
                       		<td><textarea class="textarea-kontakt"></textarea></td>
                           </tr>
-                      	<tr>
-                          	<td></td>
-                          	<td><button class="btn btn-lg btn-success hytter-btn">Send</button></td>
-                          </tr>
                       </table>
+                      <button class="btn btn-lg btn-success hytter-btn">Send</button>
                   </form>
               </div>
 
