--- a/Arrangor/arrangor_konsertoversikt.html
+++ b/Arrangor/arrangor_konsertoversikt.html
@@ -20,8 +20,10 @@
         </div>
         <div id="menubar">
           <ul id="menu">
-              <li><a href="arrangor_home.html">Min Side</a></li>
-              <li><a>Konsertoversikt</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="../Om_Oss/Om_Oss.html">Om Oss</a></li>
+            <li><a href="../Kontakt/Kontakt.html">Kontakt</a></li>
+            <li><a href="../Log_Out/login.html">Log Out</a></li>
           </ul>
         </div>
       </div>
