--- a/Calender/calendar.html
+++ b/Calender/calendar.html
@@ -10,6 +10,24 @@
 </head>
 
 <body>
+<header id="header">
+  <div id="inner-header">
+    <div id="overskrift1">
+      <h1>WELCOME</h1>
+    </div>
+    <div id="overskrift2">
+      <h2>To this Shit Site</h2>
+    </div>
+    <div id="menubar">
+      <ul id="menu">
+        <li><a href="#">Home</a></li>
+        <li><a href="../Om_Oss/Om_Oss.html">Om Oss</a></li>
+        <li><a href="../Kontakt/Kontakt.html">Kontakt</a></li>
+        <li><a href="../Log_Out/login.html">Log Out</a></li>
+      </ul>
+    </div>
+  </div>
+</header>
 <table id="week-table">
   <thead>
     <tr>
