--- a/Arrangør/arrangor_konsertoversikt.html
+++ b/Arrangør/arrangor_konsertoversikt.html
@@ -19,10 +19,10 @@
         </div>
         <div id="menubar">
           <ul id="menu">
-              <li><a>Home</a></li>
-              <li><a>Something</a></li>
-              <li><a>Things</a></li>
-              <li><a>Nothing</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="../Om_Oss/Om_Oss.html">Om Oss</a></li>
+            <li><a href="../Kontakt/Kontakt.html">Kontakt</a></li>
+            <li><a href="../Log_Out/login.html">Log Out</a></li>
           </ul>
         </div>
       </div>
