--- a/Kontakt/Kontakt.html
+++ b/Kontakt/Kontakt.html
@@ -19,12 +19,10 @@
         </div>
         <div id="menubar">
           <ul id="menu">
-              <li><a>Home</a></li>
-              <li><a>Om Oss</a></li>
-              <li><a>Kontakt</a></li>
-              <li><a>Log Out</a></li>
-
-          </ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="../Om_Oss/Om_Oss.html">Om Oss</a></li>
+              <li><a href="../Kontakt/Kontakt.html">Kontakt</a></li>
+              <li><a href="../Log_Out/login.html">Log Out</a></li>
         </div>
       </div>
     </header>
