--- a/Om_Oss/Om_Oss.html
+++ b/Om_Oss/Om_Oss.html
@@ -19,11 +19,10 @@
         </div>
         <div id="menubar">
           <ul id="menu">
-              <li><a>Home</a></li>
-              <li><a>Om Oss</a></li>
-              <li><a>Kontakt</a></li>
-              <li><a href="/it1901/Log_In"><a>Log Out</a></li>
-
+              <li><a href="#">Home</a></li>
+              <li><a href="../Om_Oss/Om_Oss.html">Om Oss</a></li>
+              <li><a href="../Kontakt/Kontakt.html">Kontakt</a></li>
+              <li><a href="../Log_Out/login.html">Log Out</a></li>
           </ul>
         </div>
       </div>
