--- a/Template.html
+++ b/Template.html
@@ -18,17 +18,16 @@
         </div>
         <div id="menubar">
           <ul id="menu">
-              <li><a>Home</a></li>
-              <li><a>Om Oss</a></li>
-              <li><a>Kontakt</a></li>
-              <li><a>Log Out</a></li>
-
+            <li><a href="#">Home</a></li>
+            <li><a href="../Om_Oss/Om_Oss.html">Om Oss</a></li>
+            <li><a href="../Kontakt/Kontakt.html">Kontakt</a></li>
+            <li><a href="../Log_Out/login.html">Log Out</a></li>
           </ul>
         </div>
       </div>
     </header>
-
     <main id="Main-content">
+      
     </main>
     <!-- Slutt på sidens innhold -->
   <!-- Content slutt -->
