--- a/Kontakt/Kontakt.html
+++ b/Kontakt/Kontakt.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Om Oss</title>
+    <title>Konakt</title>
     <link rel="stylesheet" type="text/css" href="..\CSS\general.css">
 
   </head>
